<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.QuizKotlin"
    android:background="@color/warm_orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_large"
        android:paddingVertical="@dimen/padding_normal"
        tools:context=".activities.LoginActivity"
        android:background="@color/warm_orange">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_20"
            android:src="@drawable/quiz_app_logo"
            app:civ_border_color="#FF000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:text="@string/no_account" />

            <TextView
                android:id="@+id/signIn_register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:text="@string/create_one"
                android:textColor="@color/color_primary_variant" />

        </LinearLayout>

        <TextView
            android:id="@+id/signIn_warning_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins"
            android:text="@string/bad_login_credential"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_18"
            android:visibility="invisible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signIn_email_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signIn_pwd_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/color_primary_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signIn_forgotPwd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/forgot_password"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/signIn_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_15"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_15"
            android:textColor="?android:textColorPrimary"
            android:text="@string/or1" />

        <Button
            android:id="@+id/signin_googleLogin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:backgroundTint="@color/blue"
            android:drawableLeft="@drawable/google_icon"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"

            android:textSize="@dimen/text_16"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/signin_msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/poppins"
            android:text="@string/signing_in"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_16"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_5"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="?android:textColorPrimary"
            android:text="@string/login__info_msg"
            android:textSize="@dimen/text_12" />

    </LinearLayout>

</ScrollView>