...
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/gray" />


            <TextView
                android:id="@+id/quiz_bank"
                android:textColor="?android:textColorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:paddingHorizontal="@dimen/padding_small"
                android:paddingVertical="@dimen/padding_normal"
...
