<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activities.AddQuestion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height_normal"
        android:background="@drawable/top_bar_bg"
        android:padding="@dimen/padding_normal">

        <ImageView
            android:id="@+id/add_question_goBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_10"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15"
            android:layout_toEndOf="@+id/add_question_goBackButton"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/add_question"

            android:textColor="@color/white"
            android:textSize="@dimen/text_26" />

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dashboard_layout_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="@dimen/padding_large">
            <TextView
                android:id="@+id/choose_quiz"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin_15"

                android:fontFamily="@font/poppins_bold"
                android:text="@string/choose_quiz"
                android:textColor="@color/grey"
                android:textColorHint="@color/browser_actions_title_color"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="365dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/margin_15"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/select_question_bank"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/add_question"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/enter_question_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/browser_actions_title_color"

        android:textSize="@dimen/text_26" />
    <ProgressBar
        android:id="@+id/options_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10"
        android:visibility="gone" />
    <TextView
        android:id="@+id/options_failed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_15"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/options_not_found"
        android:textSize="@dimen/text_22"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/options_list_rv"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"/>

    <EditText
        android:id="@+id/correct_answer_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp"

        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/enter_correct_answer"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/text_18" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_10"
        android:text="@string/save_button"
        android:textAllCaps="false"
        android:textSize="@dimen/text_24" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>